--- a/views/Magicluna.html
+++ b/views/Magicluna.html
@@ -92,6 +92,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
     <script src="/public/files/jquery-3.2.1.min.js" ></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/public/files/bootstrap.min.js"></script>
