--- a/views/layout.html
+++ b/views/layout.html
@@ -86,6 +86,7 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+<script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
 <script src="/public/files/jquery-3.2.1.min.js" ></script>
 <script src="/public/files/bootstrap.min.js"></script>
 {% block script%}
