--- a/views/layout.html
+++ b/views/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0052) -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -11,8 +11,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/public/files/bootstrap.min.css" rel="stylesheet">
-    {% block head %}
     <link href="/public/files/magicluna.css" rel="stylesheet">
+    {% block head %}
     {% endblock %}
 </head>
 <body>
@@ -39,6 +39,9 @@
                         </li>
                         <li class="nav-item"  id="casual">
                             <a class="nav-link" href="/article_list?type=2">随笔</a>
+                        </li>
+                        <li class="nav-item"  id="marx">
+                            <a class="nav-link" href="/marx">乱入</a>
                         </li>
                         <!-- <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
