--- a/views/Magicluna.html
+++ b/views/Magicluna.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/article_list?type=2">随笔</a>
                 </li>
+                <li class="nav-item"  id="marx">
+                  <a class="nav-link" href="/marx">乱入</a>
+                </li>
                <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Dropdown
