--- a/views/marx.html
+++ b/views/marx.html
@@ -1,7 +1,7 @@
 {% extends './layout.html' %}
 <head>
     <meta charset="UTF-8">
-    <title>知乎赞数整张图</title>
+    <title>知乎赞数增长图</title>
     {% block head %}
     <style>
         #container{
@@ -21,18 +21,17 @@
 {% block script%}
 <script src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
 <script>
-    var chart = null;
-    $.getJSON('https://data.jianshukeji.com/jsonp?filename=json/usdeur.json&callback=?', function (data) {
+    var chart=null;
+    $.getJSON('http://localhost/getData', function (data) {
         chart = Highcharts.chart('container', {
             chart: {
                 zoomType: 'x'
             },
             title: {
-                text: '美元兑欧元汇率走势图'
+                text: '现代的大部分女性并没有受到不公平待遇，可是为什么会有那么多人在意女权主义?'
             },
             subtitle: {
-                text: document.ontouchstart === undefined ?
-                    '鼠标拖动可以进行缩放' : '手势操作进行缩放'
+                text: '链接：https://www.zhihu.com/question/64427330/answer/348184378'
             },
             xAxis: {
                 type: 'datetime',
@@ -61,7 +60,7 @@
             },
             yAxis: {
                 title: {
-                    text: '汇率'
+                    text: '赞'
                 }
             },
             legend: {
@@ -90,12 +89,13 @@
                             lineWidth: 1
                         }
                     },
-                    threshold: null
+                    //threshold: 0
                 }
             },
             series: [{
-                type: 'area',
-                name: '知乎赞数增长图',
+                turboThreshold:0 ,
+                //             type: 'area',
+                name: '赞',
                 data: data
             }]
         });
