--- a/views/marx.html
+++ b/views/marx.html
@@ -22,7 +22,7 @@
 <script src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
 <script>
     var chart=null;
-    $.getJSON('http://localhost/datajson', function (data) {
+    $.getJSON('http://www.magicluna.me/datajson', function (data) {
         chart = Highcharts.chart('container', {
             chart: {
                 zoomType: 'x'
