--- a/views/layout.html
+++ b/views/layout.html
@@ -40,8 +40,16 @@
                         <li class="nav-item"  id="casual">
                             <a class="nav-link" href="/article_list?type=2">随笔</a>
                         </li>
-                        <li class="nav-item"  id="marx">
-                            <a class="nav-link" href="/marx">乱入</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                乱入
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/marx">马原课代表的高赞问题</a>
+                                <a class="dropdown-item" href="/software">南大软院研究生的入学成绩</a>
+                                <!--<div class="dropdown-divider"></div>-->
+                                <!--<a class="dropdown-item" href="#">Something else here</a>-->
+                            </div>
                         </li>
                         <!-- <li class="nav-item dropdown">
                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
