--- a/views/chart-software.html
+++ b/views/chart-software.html
@@ -33,7 +33,7 @@
             zoomType: 'xy'
         },
         title: {
-            text: '507 人按性别划分的身高和体重分布图'
+            text: '图表建设中'
         },
         subtitle: {
             text: '数据来源: Heinz  2003'
