--- a/views/chart-zijing-register.html
+++ b/views/chart-zijing-register.html
@@ -6,8 +6,13 @@
     <style>
         #container{
             position: relative;
-            top:150px;
+            top:100px;
             margin: 0 20px;
+        }
+        #container2{
+            position: relative;
+            top: 100px;
+            margin: 40px 20px;
         }
     </style>
     {% endblock %}
@@ -16,6 +21,8 @@
 <body>
 {% block body %}
 <div id="container"></div>
+<div id="container2"></div>
+
 {% endblock %}
 </body>
 {% block script%}
@@ -99,7 +106,6 @@
             data: data
         }]
     });
-
 </script>
 {% endblock %}
 
