--- a/views/chart-software.html
+++ b/views/chart-software.html
@@ -36,7 +36,7 @@
             text: '图表建设中'
         },
         subtitle: {
-            text: '数据来源: Heinz  2003'
+            text: '数据来源:software.nju.edu.cn'
         },
         xAxis: {
             title: {
