--- a/views/Magicluna.html
+++ b/views/Magicluna.html
@@ -46,9 +46,11 @@
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/marx">马原课代表的高赞问题</a>
-                    <a class="dropdown-item" href="/software">南大软院研究生的入学成绩</a>
+                    <!--<a class="dropdown-item" href="/software">南大软院研究生的入学成绩</a>-->
                     <a class="dropdown-item" href="/zijing-register">紫荆注册折线图</a>
                     <a class="dropdown-item" href="/zijing-rate">紫荆分享率散点图</a>
+                    <a class="dropdown-item" href="/zijing-name-cloud">紫荆用户名词云</a>
+
 
                     <!--<div class="dropdown-divider"></div>-->
                     <!--<a class="dropdown-item" href="#">Something else here</a>-->
